--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ requests==2.28.1
 argparse==1.4.0
 pytest==7.3.1
 coverage==7.2.7
+# Security and monitoring dependencies
+html5lib==1.1
+bleach==6.0.0
