ci: fix release permissions; use action-gh-release to upload dist assets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main, master ]
 
+permissions:
+  contents: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -137,14 +140,14 @@ jobs:
       with:
         name: dist
         path: dist/
-    
-    - name: Create Release
-      uses: actions/create-release@v1
+
+    - name: Create GitHub Release and Upload Assets
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ github.run_number }}
-        release_name: Release v${{ github.run_number }}
+        name: Release v${{ github.run_number }}
         body: |
           Automated release from CI/CD pipeline
           
@@ -152,13 +155,6 @@ jobs:
           - See CHANGELOG.md for details
         draft: false
         prerelease: false
-    
-    - name: Upload Release Assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/
-        asset_name: ScriptAI-dist
-        asset_content_type: application/zip
+        files: |
+          dist/*.whl
+          dist/*.tar.gz
