--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Read VERSION
+      id: version
+      run: |
+        echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
+    
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
@@ -146,8 +151,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ github.run_number }}
-        name: Release v${{ github.run_number }}
+        tag_name: v${{ steps.version.outputs.version }}
+        name: Release v${{ steps.version.outputs.version }}
         body: |
           Automated release from CI/CD pipeline
         generate_release_notes: true
