--- a/.gitattributes
+++ b/.gitattributes
@@ -1,40 +1,6 @@
-# Set default behavior to automatically normalize line endings
 * text=auto
-
-# Explicitly declare text files to be normalized
-*.py text
-*.js text
-*.html text
-*.css text
-*.md text
-*.txt text
-*.json text
-*.yml text
-*.yaml text
-
-# Denote all files that are truly binary and should not be modified
-*.png binary
-*.jpg binary
-*.jpeg binary
-*.gif binary
-*.ico binary
-*.woff binary
-*.woff2 binary
-*.ttf binary
-*.eot binary
-
-# Python specific
-*.pyd binary
-*.pyc binary
-*.pyo binary
-*.pyz binary
-*.pyw text
-
-# JavaScript specific
-*.min.js binary
-
-# Linguist language overrides
-*.py linguist-language=Python
-templates/* linguist-language=HTML
-static/js/* linguist-language=JavaScript
-static/css/* linguist-language=CSS
+*.py text eol=lf
+*.toml text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.md text eol=lf
