--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ requests==2.28.1
 argparse==1.4.0
 pytest==7.3.1
 coverage==7.2.7
+# Pin Black for consistent formatting across py310/py311 environments
+black==23.12.1
 # Security and monitoring dependencies
 html5lib==1.1
 bleach==6.0.0
