--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest-cov black flake8 mypy
+        # Pin Black to avoid cross-version formatting diffs
+        pip install pytest-cov flake8 mypy black==23.12.1
     
     - name: Lint with flake8
       run: |
@@ -49,6 +50,7 @@ jobs:
     
     - name: Format check with black
       run: |
+        black --version
         black --check .
     
     - name: Test with pytest
