style(black): disable string normalization to avoid quote-churn on py311

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ exclude = ["tests*", "examples*"]
 line-length = 88
 target-version = ['py38', 'py39', 'py310', 'py311']
 include = '\.pyi?$'
+skip-string-normalization = true
 extend-exclude = '''
 /(
   # directories
