ci(black): show diffs with --diff to pinpoint 3.9/3.11 reformat

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,8 @@ jobs:
     - name: Format check with black
       run: |
         black --version
-        black --check .
+        # Show exact diffs to identify reformat targets
+        black --diff --check .
     
     - name: Test with pytest
       run: |
