--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "coverage>=7.2.7",
     "html5lib>=1.1",
     "bleach>=6.0.0",
+    "prometheus-client>=0.17.0",
     "types-requests",
 ]
 
