docs: add .env.example for clean setup without secrets

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-# OpenAI API Key (Optional - for commercial model)
-# Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+# ScriptAI environment configuration (example)
+# Copy to `.env` and set your credentials. Do NOT commit real secrets.
 
-# HuggingFace API Key (Optional - free alternative)
-# Get from: https://huggingface.co/settings/tokens
-HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+# Optional — enables OpenAI backend if provided
+OPENAI_API_KEY=
 
-# Note: You only need to set one of these keys to use the application
-# The local model option doesn't require any API keys
+# Optional — enables HuggingFace backend if provided
+HUGGINGFACE_API_KEY=
