Update links, UI polish, and docs for v1.3.0
- Update all GitHub links to qtaura/ScriptAI across UI, templates, and docs
- Fix TabsTrigger active styling for Web vs CLI
- Update Hero and Footer version labels to v1.3.0
- Rebuild frontend assets under static/figmalol
- README cleanup (consolidated Security/Monitoring, Quickstart Windows note)
- CHANGELOG 1.3.0: add fixes and documentation updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,11 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/jailk123/ScriptAI"
-Documentation = "https://github.com/jailk123/ScriptAI#readme"
-Repository = "https://github.com/jailk123/ScriptAI.git"
-Issues = "https://github.com/jailk123/ScriptAI/issues"
-Changelog = "https://github.com/jailk123/ScriptAI/blob/main/CHANGELOG.md"
+Homepage = "https://github.com/qtaura/ScriptAI"
+Documentation = "https://github.com/qtaura/ScriptAI#readme"
+Repository = "https://github.com/qtaura/ScriptAI.git"
+Issues = "https://github.com/qtaura/ScriptAI/issues"
+Changelog = "https://github.com/qtaura/ScriptAI/blob/main/CHANGELOG.md"
 
 [project.scripts]
 scriptai = "cli:main"
