feat(adapters): add Anthropic Claude and Google Gemini backends; wire into CLI and UI registry; update docs and .env placeholders

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ OPENAI_API_KEY=
 
 # Optional — enables HuggingFace backend if provided
 HUGGINGFACE_API_KEY=
+
+# Optional — enables Anthropic Claude backend if provided
+ANTHROPIC_API_KEY=
+
+# Optional — enables Google Gemini backend if provided
+GOOGLE_API_KEY=
