chore(vercel): add root rewrite and pin python runtime to 3.12

--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,10 @@
     { "source": "/assets/:path*",   "destination": "/api/assets/:path*" },
     { "source": "/vite.svg",        "destination": "/api/vite.svg" },
     { "source": "/modelCards.json", "destination": "/api/modelCards.json" }
-  ]
+  ],
+  "functions": {
+    "api/**/*.py": {
+      "runtime": "python3.12"
+    }
+  }
 }
