--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "rewrites": [
     { "source": "/",               "destination": "/api/ui/new" },
     { "source": "/index.html",     "destination": "/api/ui/new" },
@@ -18,7 +19,7 @@
   ],
   "functions": {
     "api/**/*.py": {
-      "runtime": "python3.12"
+      "runtime": "vercel-python@3.12"
     }
   }
 }
