--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,61 @@ jobs:
         flags: unittests
         name: codecov-umbrella
 
+  frontend:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - name: Install frontend dependencies
+      working-directory: frontend
+      run: |
+        npm ci
+
+    - name: Run frontend unit tests (Vitest)
+      working-directory: frontend
+      run: |
+        npm run test
+
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+
+    - name: Install backend dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - name: Install frontend dependencies
+      working-directory: frontend
+      run: |
+        npm ci
+
+    - name: Install Playwright browsers
+      working-directory: frontend
+      run: |
+        npx playwright install --with-deps
+
+    - name: Run e2e tests (Playwright)
+      working-directory: frontend
+      run: |
+        npm run test:e2e
+
   security:
     runs-on: ubuntu-latest
     steps:
@@ -98,7 +153,7 @@ jobs:
           safety-report.json
 
   build:
-    needs: [test, security]
+    needs: [test, security, frontend, e2e]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     
