--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,12 +43,13 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/user-event": "^14.5.2",
-    "vitest": "^2.1.5",
-    "@vitest/coverage-v8": "^2.1.5",
-    "jsdom": "^25.0.0",
-    "@playwright/test": "^1.47.2"
+    "@testing-library/react": "16.3.0",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/user-event": "14.6.1",
+    "vitest": "2.1.9",
+    "@vitest/coverage-v8": "2.1.9",
+    "jsdom": "25.0.1",
+    "@playwright/test": "1.56.0",
+    "playwright": "1.56.0"
   }
 }
