--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,6 @@
     "vitest": "2.1.9",
     "@vitest/coverage-v8": "2.1.9",
     "jsdom": "25.0.1",
-    "@playwright/test": "1.56.0",
-    "playwright": "1.56.0"
+    "@playwright/test": "1.56.0"
   }
 }
