--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,13 @@
     "clsx": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.470.0",
+    "prismjs": "^1.29.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.2"
