--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv==0.19.0
 requests==2.28.1
 argparse==1.4.0
 pytest==7.3.1
+pytest-cov==4.1.0
 coverage==7.2.7
 # Pin Black for consistent formatting across py310/py311 environments
 black==23.12.1
