--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,12 +58,20 @@ jobs:
       run: |
         pytest tests/ -v --cov=. --cov-report=xml --cov-report=html
     
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload backend coverage to Codecov
+      uses: codecov/codecov-action@v4
       with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
+        files: ./coverage.xml
+        flags: backend
+        name: backend
+
+    - name: Upload backend coverage artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: backend-coverage
+        path: |
+          coverage.xml
+          htmlcov/
 
   frontend:
     runs-on: ubuntu-latest
@@ -80,10 +88,23 @@ jobs:
       run: |
         npm ci
 
-    - name: Run frontend unit tests (Vitest)
+    - name: Run frontend unit tests with coverage (Vitest)
       working-directory: frontend
       run: |
-        npm run test
+        npm run test:coverage
+
+    - name: Upload frontend coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        files: frontend/coverage/lcov.info
+        flags: frontend
+        name: frontend
+
+    - name: Upload frontend coverage artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: frontend-coverage
+        path: frontend/coverage/
 
   e2e:
     runs-on: ubuntu-latest
@@ -119,6 +140,20 @@ jobs:
       working-directory: frontend
       run: |
         npm run test:e2e
+
+    - name: Upload Playwright test results (on failure)
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: playwright-test-results
+        path: frontend/test-results
+
+    - name: Upload Playwright report (on failure)
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: playwright-report
+        path: frontend/playwright-report
 
   security:
     runs-on: ubuntu-latest
