--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Upload backend coverage artifact
       uses: actions/upload-artifact@v4
       with:
-        name: backend-coverage
+        name: backend-coverage-py${{ matrix.python-version }}
         path: |
           coverage.xml
           htmlcov/
