--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,43 +15,44 @@
     "e2e:install": "playwright install"
   },
   "dependencies": {
-    "clsx": "^2.1.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.470.0",
     "prismjs": "^1.29.0",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-separator": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@playwright/test": "1.56.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "^24.6.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.24",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/coverage-v8": "2.1.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "jsdom": "25.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "@testing-library/react": "16.3.0",
-    "@testing-library/jest-dom": "6.9.1",
-    "@testing-library/user-event": "14.6.1",
-    "vitest": "2.1.9",
-    "@vitest/coverage-v8": "2.1.9",
-    "jsdom": "25.0.1",
-    "@playwright/test": "1.56.0"
+    "vitest": "2.1.9"
   }
 }
