fix(vercel): serve SPA from /api so asset paths resolve via /api/assets and /api/vite.svg

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/",               "destination": "/api/ui/new" },
-    { "source": "/index.html",     "destination": "/api/ui/new" },
+    { "source": "/",               "destination": "/api" },
+    { "source": "/index.html",     "destination": "/api" },
     { "source": "/generate",        "destination": "/api/generate" },
     { "source": "/models",          "destination": "/api/models" },
     { "source": "/model-profiles",  "destination": "/api/model-profiles" },
